// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vue/containers/Form loading next step 1`] = `
"<form class=\\"gincko\\">
  <div class=\\"gincko__steps\\">
    <div class=\\"ui-loader\\"></div>
  </div>
</form>"
`;

exports[`vue/containers/Form with active step 1`] = `
"<form class=\\"gincko\\">
  <div class=\\"gincko__steps\\">
    <div id=\\"start\\" index=\\"0\\" is-active=\\"true\\" custom-components=\\"[object Object]\\"></div>
    <div id=\\"end\\" index=\\"1\\" custom-components=\\"[object Object]\\"></div>
    <!---->
  </div>
</form>"
`;
